--- a/ExecX64/ExecX64.vcxproj.filters
+++ b/ExecX64/ExecX64.vcxproj.filters
@@ -35,9 +35,19 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="nobase64.inc">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include=".map">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="..\x64\Release\ExecX64.map" />
+    <None Include="imp.asm">
       <Filter>Source Files</Filter>
     </None>
   </ItemGroup>
@@ -45,5 +55,10 @@
     <CustomBuild Include="x64.asm">
       <Filter>Source Files</Filter>
     </CustomBuild>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="ExecX64.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
