--- a/DownloadAndRun-x64/DownloadAndRun-x64.vcxproj
+++ b/DownloadAndRun-x64/DownloadAndRun-x64.vcxproj
@@ -47,7 +47,7 @@
       <AdditionalDependencies>ntdllp.lib;ScEntry.lib;kernel32.lib;WINHTTP.lib</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>"$(TargetPath)" *$(OutDir)$(ProjectName).map*imp.$(PlatformTarget).asm**$(ProjectName).$(PlatformTarget).asm*$(ProjectName).$(PlatformTarget).exe</Command>
+      <Command>"$(TargetPath)" *$(OutDir)$(ProjectName).map*$(PlatformTarget).obj*imp.$(PlatformTarget).asm**$(ProjectName).$(PlatformTarget).asm*$(ProjectName).$(PlatformTarget).exe</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
