--- a/DecryptUnpackRun/DecryptUnpackRun.vcxproj
+++ b/DecryptUnpackRun/DecryptUnpackRun.vcxproj
@@ -51,7 +51,7 @@
       <AdditionalDependencies>ntdllp.lib;ScEntry.lib;kernel32.lib;user32.lib;bcrypt.lib;crypt32.lib;cabinet.lib</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>"$(TargetPath)" *$(OutDir)$(ProjectName).map*imp.$(PlatformTarget).asm**$(TargetName).$(PlatformTarget).asm</Command>
+      <Command>"$(TargetPath)" *$(OutDir)$(ProjectName).map*$(PlatformTarget).obj*imp.$(PlatformTarget).asm**$(TargetName).$(PlatformTarget).asm</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
