--- a/TestTask/TestTask.vcxproj
+++ b/TestTask/TestTask.vcxproj
@@ -47,7 +47,7 @@
       <AdditionalDependencies>ntdllp.lib;ScEntry.lib;kernel32.lib;advapi32.lib;ole32.lib;Secur32.lib;Oleaut32.lib</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>"$(TargetPath)" *$(OutDir)$(ProjectName).map*imp.$(PlatformTarget).asm**$(ProjectName).$(PlatformTarget).asm*$(ProjectName).$(PlatformTarget).exe</Command>
+      <Command>"$(TargetPath)" *$(OutDir)$(ProjectName).map*$(PlatformTarget).obj*imp.$(PlatformTarget).asm**$(ProjectName).$(PlatformTarget).asm*$(ProjectName).$(PlatformTarget).exe</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
