--- a/NewScProj/NewScProj.vcxproj.filters
+++ b/NewScProj/NewScProj.vcxproj.filters
@@ -34,8 +34,6 @@
     <CustomBuild Include="x86.asm">
       <Filter>Source Files</Filter>
     </CustomBuild>
-    <CustomBuild Include="@.vcxproj">
-      <Filter>Source Files</Filter>
-    </CustomBuild>
+    <CustomBuild Include="@.vcxproj" />
   </ItemGroup>
 </Project>
